--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
-
-/* Your CSS Code here. */
+#name{
+	color: darkred;
+	padding : 10px;
+	margin : 5;
+}
+#phone{
+	color: darkred;
+	padding : 10px;
+	margin : 5;
+}
+#address{
+	color: darkred;
+	padding : 10px;
+	margin : 5;
+}
